--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     font-family: 'Nunito', sans-serif;
     text-align: center;
+    color: #FFFFFF;
 }
 
 header {
@@ -15,6 +16,7 @@ header {
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.16);
+    border-radius: 5px;
 }
 
 
@@ -60,6 +62,7 @@ h1 {
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 400px;
+    border-radius: 5px;
 }
 
 #game-table thead tr {
@@ -84,4 +87,27 @@ h1 {
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
     top: 0;
     left: 50%;
+}
+
+
+#dialogue-box {
+    /* display: none; Hidden by default */
+    display: inline-block;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.200);
+    padding: 5px;
+    font-style: normal;
+    color: #FFFFFF;
+    width: 600px;
+    height: auto;
+    border-radius: 5px;
+}
+
+#drawn-cards {
+    padding:0;
+    justify-content: center;
+    text-align:center;
+    margin:10px;
+    list-style-type:square;
+    font-size: bold;
 }
