--- a/style.css
+++ b/style.css
@@ -89,18 +89,19 @@ h1 {
     left: 50%;
 }
 
-
 #dialogue-box {
     /* display: none; Hidden by default */
     display: inline-block;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.200);
+    /* background-color: rgba(0, 0, 0, 0.200); */
     padding: 5px;
     font-style: normal;
     color: #FFFFFF;
     width: 600px;
     height: auto;
     border-radius: 5px;
+    text-shadow: 1px 1px 1px rgba(11, 11, 11, 0.444),
+    1px 1px 3px rgba(0, 0, 0, 0.444);
 }
 
 #drawn-cards {
@@ -109,5 +110,8 @@ h1 {
     text-align:center;
     margin:10px;
     list-style-type:square;
-    font-size: bold;
+    font-size: 18px;
+    font-style: bold;
+    text-shadow: 1px 1px 1px rgba(11, 11, 11, 0.444),
+    1px 1px 3px rgba(0, 0, 0, 0.444);
 }
